--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.12.jar=lib\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
+file.reference.Projecto_AMS-Fonts=Fonts
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.12.jar}
+    ${file.reference.mysql-connector-java-8.0.12.jar}:\
+    ${file.reference.Projecto_AMS-Fonts}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
